경북대 BE_이지호 6주차 과제(1단계) (#109)
* init: 5주차 코드 불러오기

* refactor: PropertyNamingStrategies로 수정

* refactor: 협업 api 명세에 맞게 수정

* DOCS: 1단계 readme 추가

* refactor: 코드 정렬

* fix: gitignore 추가

* remove: application-dev.properties를 깃허브에서 삭제

* refactor: 필드네임 수정

* feat: CORS 설정 추가

* feat: 상품 조회 파라미터 추가

* feat: 더미데이터 추가

* test: 테스트 수정

* redirect: 카카오 api 경로 통일 및 리팩터링

* feat: CORS 와일드 카드 사용으로 임시로 변경